# VrmEditor

./: .buildinfo  .ccls  .clangd  .gitignore  LICENSE  LICENSE.rtf  README.md  build.zig  build.zig.zon  clang.ini  config.h  config.h.in  genindex.html  index.html  main.zig  meson.build  meson_options.txt  objects.inv  requirements.txt  search.html  searchindex.js  ucrt.ini  vrmeditor.iss  vrmeditor.wixproj  vrmeditor.xml  zig.ini
ImGuizmo/: ImGuizmo.cpp  ImGuizmo.h  ImGuizmoContext.h  meson.build
boneskin/: meson.build
boneskin/boneskin/: base_mesh.h  deformed_mesh.cpp  deformed_mesh.h  meshdeformer.cpp  meshdeformer.h  node_state.h  skin.h  skinning_manager.cpp  skinning_manager.h  types.h
bvhutil/: Bvh.cpp  Bvh.h  BvhFrame.cpp  BvhFrame.h  BvhNode.cpp  BvhNode.h  BvhSolver.cpp  BvhSolver.h  meson.build
geometry/: dmath.h  gizmo.cpp  meson.build
glrenderer/: meson.build
glrenderer/glr/: colorspace.h  cuber.cpp  cuber.h  error_check.cpp  gizmo.cpp  gizmo.h  gl3renderer.cpp  gl3renderer.h  info.h  line_gizmo.cpp  line_gizmo.h  material.cpp  material.h  material_error.h  material_pbr_khronos.cpp  material_pbr_khronos.h  material_pbr_learn_opengl.h  material_shadow.h  material_three_vrm.h  material_three_vrm0.cpp  material_three_vrm1.cpp  material_three_vrm_builtin.h  material_unlit.h  rendering_env.h  renderpass.h  rendertarget.cpp  rendertarget.h  scene_renderer.cpp  scene_renderer.h  shader_factory.h  shader_source.cpp  shader_source.h  var.h
glrenderer/shaders/: ubo.glsl  wireframe.frag  wireframe.geom  wireframe.vert
glrenderer/threejs_shader_chunks/: alphamap_fragment.glsl.js  aomap_fragment.glsl.js  clearcoat_pars_fragment.glsl.js  clipping_planes_pars_vertex.glsl.js  color_pars_vertex.glsl.js  default_fragment.glsl.js  displacementmap_vertex.glsl.js  envmap_fragment.glsl.js  envmap_pars_fragment.glsl.js  fog_vertex.glsl.js  lights_fragment_end.glsl.js  lights_lambert_pars_fragment.glsl.js  lights_pars_begin.glsl.js  metalnessmap_pars_fragment.glsl.js  morphcolor_vertex.glsl.js  normal_pars_vertex.glsl.js  roughnessmap_pars_fragment.glsl.js  shadowmask_pars_fragment.glsl.js  skinning_vertex.glsl.js  specularmap_fragment.glsl.js  specularmap_pars_fragment.glsl.js  tonemapping_pars_fragment.glsl.js  transmission_pars_fragment.glsl.js  uv2_pars_vertex.glsl.js  uv2_vertex.glsl.js
imgui_libs/: ImGuizmo.cpp  ImGuizmo.h  meson.build
jsongui/: json_gui.cpp  json_gui.h  json_widgets.cpp  json_widgets.h  meson.build
jsongui/jsonschema/: extensions.h  gltf.cpp  gltf.h  json_prop.cpp  json_prop.h  tag.cpp  tag.h  vrm0.h  vrm1.h
libvrm/: ReadAllBytes.h  animation.cpp  bvh.cpp  bvhframe.cpp  bvhnode.cpp  bvhresolver.cpp  bvhscene.cpp  bvhsolver.cpp  bvhsource.cpp  exporter.cpp  gizmo.cpp  glb.cpp  image.cpp  importer.cpp  jsonpath.cpp  meson.build  node.cpp  scene.cpp  springbone.cpp  springcollider.cpp  springjoint.cpp  srht_sender.cpp  srht_update.cpp  timeline.cpp
libvrm/include/: timeline.h
libvrm/runtimescene/: animation_update.cpp  scene.cpp  springcollision.cpp  springjoint.cpp
libvrm/vrm/: animation.cpp  animation.h  animation_update.cpp  animation_update.h  base_mesh.h  boundingbox.h  bvhframe.cpp  bvhframe.h  bvhscene.cpp  colorspace.h  constraint.h  deformed_mesh.h  dmath.h  euclidean_transform.h  exporter.cpp  exporter.h  expression.h  fileutil.h  gltf.h  gltfon.h  gltfroot.cpp  gltfroot.h  humanbone_map.h  image.cpp  image.h  importer.cpp  importer.h  jsonpath.h  jsons.h  materialtypes.h  node.cpp  node.h  node_state.h  quat_packer.h  runtime_node.h  runtime_scene.cpp  runtime_scene.h  runtime_springjoint.cpp  runtime_springjoint.h  scene_interface.h  (+15 more)
recti/: camera_mouse.cpp  camera_mouse.h  drawcommand.cpp  drawcommand.h  mat4.cpp  mat4.h  meson.build  model_context.h  operation.h  ray.h  recti.cpp  recti.h  recti_imgui.h  state.h  style.cpp  style.h  translation.cpp  translation.h  tripod.cpp  tripod.h  vec2.h  vec4.cpp  vec4.h
recti/handle/: draghandle.h  handle.h  result.h  rotation.cpp  rotation.h  rotationDragHandle.cpp  rotationDragHandle.h  rotation_drag.cpp  rotation_drag.h  rotation_gizmo.cpp  rotation_gizmo.h  scale.cpp  scale.h  scaleDragHandle.cpp  scaleDragHandle.h  scale_drag.cpp  scale_drag.h  scale_gizmo.cpp  scale_gizmo.h  state.h  translation.cpp  translation.h  translationDragHandle.cpp  translationDragHandle.h  translationGizmo.cpp  translationGizmo.h  translation_drag.cpp  translation_drag.h  translation_gizmo.cpp  translation_gizmo.h  uniform_scale.cpp  uniform_scale.h
recti/imguizmo/: ImGuizmo.cpp  ImGuizmo.h  ImGuizmoContext.h  matrix_t.cpp  matrix_t.h  renderer.cpp  vec_t.cpp  vec_t.h
runtimescene/: animation.cpp  animation_update.cpp  meson.build  runtime_node.cpp  scene.cpp  scene_updater.cpp  springjoint.cpp
runtimescene/runtimescene/: animation_update.h  runtime_node.h  scene.h  scene_updater.h  sprintjoint.h
src/: app.cpp  app.h  assetdir.cpp  assetdir.h  camera.h  fs_util.h  gl3renderer.cpp  gl3renderer.h  gui.cpp  gui.h  imlogger.h  imtimeline.h  luahost.cpp  luahost.h  main.cpp  material.h  mesh.h  meson.build  orbitview.h  platform.cpp  platform.h  rendertarget.h  scene.cpp  scene.h  scenetypes.h  timeline.cpp  timeline.h  udp_receiver.h  viewporjection.h  windows_helper.h
src/bvhsender/: Animation.cpp  Animation.h  BvhPanel.cpp  BvhPanel.h  GlfwPlatform.cpp  GlfwPlatform.h  GuiApp.cpp  GuiApp.h  Payload.cpp  Payload.h  UdpSender.cpp  UdpSender.h  main.cpp  meson.build
src/docks/: csscolor.h  cuber.cpp  cuber.h  gl3renderer.cpp  gl3renderer.h  gui.cpp  gui.h  humanoid_dock.h  imhumanoid.h  imlogger.h  imtimeline.h  json_dock.cpp  json_dock.h  motion_dock.cpp  motion_dock.h  rendertarget.h  scene_dock.cpp  scene_dock.h  treecontext.h  view_dock.h  viewporjection.h  vrm_dock.cpp  vrm_dock.h
src/vrmeditor/: app.cpp  app.h  asio_task.h  assetdir.cpp  assetdir.h  co_task.h  fbx_loader.cpp  fbx_loader.h  filewatcher.cpp  filewatcher.h  fs_util.h  fs_util_posix.cpp  icon.rc  (+12 more)
tests/: base64.cpp  glb_export.cpp  gltf_samples.cpp  gltf_samples_gen.py  gltfon.cpp  json.cpp  meson.build  text.cpp  vrma.cpp
(+564 files in other folders)
