executable(
    'vrmeditor',
    [
        'main.cpp',
        'gl3renderer.cpp',
        'gui.cpp',
        'platform.cpp',
        'app.cpp',
        'luahost.cpp',
        'assetdir.cpp',
        'timeline.cpp',
    ],
    install: true,
    gui_app: true,
    dependencies: [
        glew_dep,
        glfw_dep,
        imgui_dep,
        glo_dep,
        imguizmo_dep,
        vrm_dep,
        im_neo_sequencer_dep,
        luajit_dep,
        bvhutil_dep,
    ],
)
