executable(
    'vrmeditor',
    [
        'main.cpp',
        'gl3renderer.cpp',
        'gui.cpp',
        'platform.cpp',
        'app.cpp',
        'luahost.cpp',
        'assetdir.cpp',
    ],
    install: true,
    gui_app: true,
    dependencies: [
        glew_dep,
        glfw_dep,
        imgui_dep,
        grapho_dep,
        imguizmo_dep,
        vrm_dep,
        luajit_dep,
        bvhutil_dep,
        cuber_dep,
        imgui_filedialog_dep,
        iconfont_cpp_headers_dep,
        imnodes_dep,
    ],
)
