executable(
    'vrmeditor',
    [
        'main.cpp',
        'platform.cpp',
        'app.cpp',
        'luahost.cpp',
        'assetdir.cpp',
        'docks/gl3renderer.cpp',
        'docks/gui.cpp',
        'docks/json_dock.cpp',
        'docks/motion_dock.cpp',
        'docks/cuber.cpp',
    ],
    install: true,
    gui_app: true,
    dependencies: [
        glew_dep,
        glfw_dep,
        imgui_dep,
        grapho_dep,
        imguizmo_dep,
        vrm_dep,
        luajit_dep,
        cuber_dep,
        imgui_filedialog_dep,
        iconfont_cpp_headers_dep,
        imnodes_dep,
    ],
)
